# tiny-court

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  README.md  main.py  package.json  pyproject.toml  requirements.txt  skills-lock.json
assets/: image-generation-prompt.md
docs/: README.md  agent-traces.md  deploying-gradio-on-huggingface.md  deployment.md  design-spec.md  field-notes-the-urge-to-outsource-judgment.md  full-trial-conversation-flow.md  hackathon-winning-roadmap.md  hackathon.md  hf-space-configuration.md  modal-minicpm-handoff.md  modal-remote-integration-plan.md  modal-serving-decision.md  model-consideration.md  model-serving-recommendations.md  motivation.md  multimodal-textbox.md  remaining-work.md  single-page-wizard-interaction.md  trial-meters-brainstorm.md
modal_minicpm/: README.md  __init__.py  modal_app.py  models.py  smoke_test.py
scripts/: ab_harness.py  deploy_space.py  download_models.py  drive.cjs  drive_chips.cjs  drive_composer.cjs  drive_full_trial.cjs  drive_layout.cjs  drive_meters_layout.cjs  drive_promo.cjs  probe_raw.py  upload_traces.py  verify_e2e.py
tests/: test_config.py  test_deploy.py  test_engine.py  test_modal_endpoint.py  test_output_safety.py  test_parsing.py  test_remote_client.py  test_safety.py  test_tracing.py  test_verdict.py  test_wizard_flow.py
tinycourt/: __init__.py  app.py  config.py  data.py  engine.py  generation.py  local_client.py  parsing.py  prompts.py  remote_client.py  render.py  safety.py  tracing.py  trial.py
wheels/: gradio_multimodalcomposer-0.0.1-py3-none-any.whl
(+28 files in other folders)
